fix buttons in dark mode

--- a/assets/css/button.css
+++ b/assets/css/button.css
@@ -72,6 +72,6 @@ button::after {
 
 @media (prefers-color-scheme: dark) {
     button {
-        border: 2px solid black;
+        border: 1px solid black;
     }
 }
